service.yml
apiVersion: v1
kind: Service
metadata: 
  name: webserver-production
spec:
  type: LoadBalancer
  ports:
    - port:
      targetport:
      protocal: TCP
  selector:
    type: webserver
    colour: blue
