ingress-smoketest.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: ingress-smoketest
  annotations: 
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: webserver-smoketest
    servicePort:
